1999-04-28  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* internal.h: Include misc.h before png.h (include standard
	headers in a well-behaved way that would otherwise be done 
	unprotected in png.h).

1999-04-27  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* internal.m (tkobjc_pixmap_update_raster): Don't call XFreeColors
	with alloc_pixels if alloc_pixels doesn't exist (e.g. Irix 6.5).
	(tkobjc_pixmap_update_raster): Likewise don't request
	XpmReturnAllocPixels.  [Note: this is untested as to whether a memory
	leak occurs on XpmFreeAttributes or not.]

1999-04-21  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* WindowGeometryRecord.m ([WindowGeometryRecord -lispIn:]): Move 
	to setting phase.

1999-04-19  Marcus G. Daniels  <mgd@helen.santafe.edu>

	* LinkItem.m ([LinkItem -createItem]): Add extra parens around
	method call arguments to strdup.

	* OvalNodeItem.m ([OvalNodeItem -createItem]): Likewise.

	* RectangleNodeItem.m ([RectangleNodeItem -createItem]): Likewise.

	* common.m (tkobjc_dynamicEval): Likewise.

	* common.m (tkobjc_createText): Likewise.

1999-04-07  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* internal.m (tkobjc_pixmap_update_raster): Put pixmap and mask
	frees inside pixmap->display conditional.  In this context, also
	call XFreeColors using xpmattrs.{colormap,alloc_pixels,nalloc_pixels}. 
	Call XpmFreeAttributes.

	* Pixmap.h (Pixmap): Add xpmattrs.

1999-04-06  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* internal.m (tkobjc_pixmap_update_raster): If pixmap or
	mask are set, free them.  Set pixmap->display to current display
	(for use with free).

	* Pixmap.m ([Pixmap +createBegin:]): Initialize pixmap, mask and
	display to zero in non-_WIN32 case.

1999-03-21  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* internal.m: Hide Rectangle during Win32 header file includes.

1999-03-16  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* Makefile.am (INCLUDES): Revert last change.
